--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <li>
         <a href="https://fidelyiu.github.io/rubbish-tool-js/">rubbish-tool-js</a>
       </li>
+      <li>
+        <a href="https://fidelyiu.github.io/yiu-tree-js/">yiu-tree-js</a>
+      </li>
     </ul>
   </body>
 </html>
